src/test/ui/regions/regions-ret-borrowed-1.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/regions-ret-borrowed-1.rs:20:14
   |
LL |     with(|o| o)
   |              ^

error: unsatisfied lifetime constraints
  --> $DIR/regions-ret-borrowed-1.rs:20:14
   |
LL |     with(|o| o)
   |           -- ^ return requires that `'1` must outlive `'2`
   |           ||
   |           |return type of closure is &'2 isize
   |           has type `&'1 isize`

error: aborting due to previous error

